--- a/SITIO_WEB/index.html
+++ b/SITIO_WEB/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/css/style.css">
     <title>Mi Página Web</title>
 </head>
+
 <body>
     
 </body>
+
 </html>
