--- a/SITIO_WEB/index.html
+++ b/SITIO_WEB/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/css/style.css">
-    <title>Mi Página Web</title>
+    <title>Página Principal</title>
 </head>
 
 <body>
-    
+    <header class="main-header">
+        <h1>Conceptos de CSS3</h1>
+        <p>Explorando Pseudocalses y Pseudoelementos</p>
+    </header>
+
+    <main class="container">
+        <h2>Pseudoelementos</h2>
+        <p class="demo-paragraph">Este párrafo demuestra el uso de <strong>::first-line</strong> y
+            <strong>::first-letter</strong>. La primera letra es más grande y la primera línea tiene un estilo distintivo, emulando un estilo editorial clásico de revista</p>
+    </main>
 </body>
 
 </html>
