--- a/SITIO_WEB/index.html
+++ b/SITIO_WEB/index.html
@@ -27,8 +27,17 @@
         <section class="card">
             <h2>Pseudoclases</h2>
             <p>Interactúa con los elementos para ver los estados</p>
-            <div class="form-group"><input type="text" placeholder="Haz clic para ver: Focus" class="custom-input">
+            <div class="form-group"><input type="text" placeholder="Haz clic para ver: focus" class="custom-input">
             </div>
+            <button class="custom-button">Pasa el mouse (:hover)</button>
+            <h3>Lista Dinámica (Child Selectors)</h3>
+            <ul class="dynamic-list">
+                <li>Soy el primer hijo (:first-child)</li>
+                <li>Elemento par (:nth-child)</li>
+                <li>Soy el tercer elemento (:nth-child(3))</li>
+                <li>Elemento par (:nth-child)</li>
+                <li>Soy el último hijo (:last-child)</li>
+            </ul>
         </section>
     </main>
 </body>
