--- a/ejercicio-bootstrap.html
+++ b/ejercicio-bootstrap.html
@@ -9,7 +9,60 @@
 </head>
 
 <body>
-    <h1></h1>
+    <h1 class="text-center">Fundamentos de Bootstrap</h1>
+    <div class="container text-center p-3">
+        <h2>Botones</h2>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+        <button type="button" class="btn btn-info">Info</button>
+        <button type="button" class="btn btn-light">Light</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+    </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-md-3">
+                <h1>Columna 1</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 2</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 3</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 4</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <h1>Columna 5</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 6</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 7</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 8</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <h1>Columna 9</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 10</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 11</h1>
+            </div>
+            <div class="col-md-3">
+                <h1>Columna 12</h1>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 
