--- a/ejercicio-bootstrap.html
+++ b/ejercicio-bootstrap.html
@@ -12,12 +12,26 @@
     <h1 class="text-center">Fundamentos de Bootstrap</h1>
     <div class="container text-center p-3">
         <h2>Botones</h2>
-        <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-danger">Danger</button>
-        <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-light">Light</button>
-        <button type="button" class="btn btn-warning">Warning</button>
+        <div class="row">
+            <div class="col-md-2">
+                <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-success">Success</button>
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-danger">Danger</button>
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-info">Info</button>
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-light">Light</button>
+            </div>
+            <div class="col-md-2">
+                <button type="button" class="btn btn-warning">Warning</button>
+            </div>
+        </div>
     </div>
     <div class="container text-center">
         <div class="row">
