--- a/menu.html
+++ b/menu.html
@@ -6,15 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Menus</title>
 </head>
 
 <body class="d-flex flex-column min-vh-100">
+
+    <!-- Barra de navegación -->
+
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
-                <ul class="nav">
+                <a class="navbar-brand" href="#"><i class="fa-brands fa-amazon-pay"></i></a>
+                <!-- <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
@@ -24,45 +28,163 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contacto</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </nav>
     </header>
     <main class="flex-fill">
+
+        <!-- Modal -->
+         
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Contrato de vida</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Aceptas que vendes tu alma al diablo
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Formulario -->
+
         <div class="container">
-            <form>
-                <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <form class="row g-3 needs-validation" novalidate>
+                <div class="col-md-4">
+                    <label for="validationCustom01" class="form-label">Nombres</label>
+                    <input type="text" class="form-control" id="validationCustom01"
+                        aria-describedby="validationCustom01Feedback" required>
+                    <div id="validationCustom01Feedback" class="valid-feedback">
+                        ¡Se ve bien!
+                    </div>
                 </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+
+                <div class="col-md-4">
+                    <label for="validationCustom02" class="form-label">Apellidos</label>
+                    <input type="text" class="form-control" id="validationCustom02"
+                        aria-describedby="validationCustom02Feedback" required>
+                    <div id="validationCustom02Feedback" class="valid-feedback">
+                        ¡Se ve bien!
+                    </div>
                 </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+
+                <div class="col-md-4">
+                    <label for="validationCustomUsername" class="form-label">Nombre de usuario</label>
+                    <div class="input-group has-validation">
+                        <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        <input type="text" class="form-control" id="validationCustomUsername"
+                            aria-describedby="inputGroupPrepend validationCustomUsernameFeedback" required>
+                        <div id="validationCustomUsernameFeedback" class="invalid-feedback">
+                            Por favor elige un nombre de usuario.
+                        </div>
+                    </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+
+                <div class="col-md-6">
+                    <label for="validationCustom03" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" id="validationCustom03"
+                        aria-describedby="validationCustom03Feedback" required>
+                    <div id="validationCustom03Feedback" class="invalid-feedback">
+                        Por favor ingresa una ciudad válida.
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <label for="validationCustom04" class="form-label">Departamento</label>
+                    <select class="form-select" id="validationCustom04"
+                        aria-describedby="validationCustom04Feedback" required>
+                        <option selected disabled value="">Seleccione...</option>
+                        <option>Amazonas</option>
+                        <option>Antioquia</option>
+                        <option>Arauca</option>
+                        <option>Atlántico</option>
+                        <option>Bolívar</option>
+                        <option>Boyacá</option>
+                        <option>Caldas</option>
+                        <option>Caquetá</option>
+                        <option>Casanare</option>
+                        <option>Cauca</option>
+                        <option>Cesar</option>
+                        <option>Chocó</option>
+                        <option>Córdoba</option>
+                        <option>Cundinamarca</option>
+                        <option>Guainía</option>
+                        <option>Guaviare</option>
+                        <option>Huila</option>
+                        <option>La Guajira</option>
+                        <option>Magdalena</option>
+                        <option>Meta</option>
+                        <option>Nariño</option>
+                        <option>Norte de Santander</option>
+                        <option>Putumayo</option>
+                        <option>Quindío</option>
+                        <option>Risaralda</option>
+                        <option>San Andrés y Providencia</option>
+                        <option>Santander</option>
+                        <option>Sucre</option>
+                        <option>Tolima</option>
+                        <option>Valle del Cauca</option>
+                        <option>Vaupés</option>
+                        <option>Vichada</option>
+                        <option>Bogotá D.C.</option>
+                    </select>
+
+                    <div id="validationCustom04Feedback" class="invalid-feedback">
+                        Por favor selecciona un departamento válido.
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck"
+                            aria-describedby="invalidCheckFeedback" required>
+                        <label class="form-check-label" for="invalidCheck">
+                            Acepto los
+                            <a class="link" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                términos y condiciones
+                            </a>
+                        </label>
+                        <div id="invalidCheckFeedback" class="invalid-feedback">
+                            Debes aceptar los términos antes de enviar.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Enviar</button>
+                </div>
+
             </form>
         </div>
     </main>
-    <footer>
+
+    <!-- Contacto (Footer) -->
+
+    <footer id="contacto">
         <div class="card text-center">
             <div class="card-header">
-                Featured
+                Contacto
             </div>
             <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Gracias especiales a</h5>
+                <p class="card-text">Pedro Abelardo Álvarez Ospina por apoyar con la creación de este sitio web</p>
+
             </div>
             <div class="card-footer text-body-secondary">
-                2 days ago
+                Copywright @2026
             </div>
         </div>
     </footer>
+
+    <!-- Llamada a la librería de Bootstrap.js -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
