--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><i class="fa-brands fa-amazon-pay"></i></a>
+                <a class="navbar-brand ps-md-3" href="#"><i class="fa-brands fa-amazon-pay"></i></a>
                 <!-- <ul class="nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
